# visual-obstacle-detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  drone_arm.py  obstacle_detection.py  point_cloud.py  pyproject.toml  scan_to_mavlink_node.py
.github/workflows/: ci.yml  ros2_ci.yml
bash-commands/: README.md
launch_files/: CMakeLists.txt  multi_zed.launch.py  multi_zed_tf.launch.py  package.xml  setup.py
launch_files/launch/: launch_all.launch.py  multi_zed.launch.py  multi_zed_odom.launch.py  single_zed.launch.py
launch_files/launch_files/: drone_pose.py
launch_files/resource/: launch_files
my_first_pkg/: setup.py
obstacle-detection_legacy/: obstacle_detection_old.py
old/scripts/: stream_data.py
scan_to_mavlink/: .gitignore  fakedata.py  package.xml  setup.cfg  setup.py  testmav.py
scan_to_mavlink/scan_to_mavlink/: package.xml  scan_to_mavlink_node.py  setup.py
scan_to_mavlink/scan_to_mavlink/scan_to_mavlink/: scan_to_mavlink_node.py
scripts/: launch.sh  launch_all.sh  stop_launch.sh  visual-obstacle-detection.service
visual_obstacle_detection/: package.xml  setup.cfg  setup.py
visual_obstacle_detection/launch/: visual_obstacle_detection.launch.py
visual_obstacle_detection/my_first_pkg/: publisher.py
visual_obstacle_detection/visual_obstacle_detection/: data_logger  excluded_boxes.xml  obstacle_detection.py  obstacle_detection_pc.py  obstacle_detection_radial.py  obstacle_detection_segment.py  obstacle_to_mavlink.py  obstacle_to_mavros.py  point_cloud.py  publisher.py  scan_to_mav_3D.py  scan_to_mavlink_sid.py
