[project]
name = "obstacle-detection"
version = "0.1.0"
description = "Obstacle detection using ZED camera and point cloud clustering"
requires-python = ">=3.9"  # Bumped from 3.8 due to setuptools security constraint
dependencies = [
    "numpy",
    "open3d",
    "setuptools>=78.1.1",  # Security: Path traversal vulnerability fix in PackageIndex.download
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
obstacle-detection = "obstacle_detection:main"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
