[project]
name = "obstacle-detection"
version = "0.1.0"
description = "Obstacle detection using ZED camera and point cloud clustering"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "open3d",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
obstacle-detection = "obstacle_detection:main"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
py-modules = ["obstacle_detection"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
