<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_to_mavlink</name>
  <version>0.8.0</version>
  <description>Converts LaserScan data to MAVLink obstacle distance messages</description>
  <url type="repository">https://github.com/VFS-Go-Aero/visual-obstacle-detection</url>
  <maintainer email="vfspurd@purdue.edu">Vertical Flight Systems Purdue</maintainer>
  <url type="website">https://vfspurdue.com</url>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <author email="chand289@purdue.edu">Advay Chandra</author>
  <author email="gfellows@purdue.edu">Grant Fellows</author>
  <author email="swadi@purdue.edu">Arin Swadi</author>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
